Fix disappearing scrollbars

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -35,8 +35,8 @@ atom-workspace {
 
 .scrollbars-visible-always {
   /deep/::-webkit-scrollbar {
-    width: 15px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
   }
   /deep/::-webkit-scrollbar-track {
     background: @scrollbar-background-color;
